# ArtRefSync

./: .gitignore  README.md  main.py  main.spec  pyproject.toml
.github/workflows/: uv_build_executable.yml  windows_pyinstaller.yml
config/: config.toml
src/artrefsync/: __init__.py  config.py  constants.py  disk_cache.py  metadata_cache.py  models.py  snail.py  stats.py  sync.py  sync_coordinator.py
src/artrefsync/api/: __init__.py  danbooru_client.py  danbooru_model.py  e621_client.py  e621_model.py  eagle_client.py  eagle_model.py  r34_client.py  r34_model.py
src/artrefsync/boards/: __init__.py  board_handler.py  danbooru_handler.py  e621_handler.py  rule34_handler.py
src/artrefsync/db/: __init__.py  dataclass_db.py  db_models.py  db_utils.py  post_db.py
src/artrefsync/stores/: eagle_storage.py  link_cache.py  plain_file_storage.py  storage.py
src/artrefsync/ui/: AdvancedScrolling.py  TagApp.py  TkThreadCaller.py  tag_post_manager.py
src/artrefsync/ui/tabs/: ActiveTags.py  ArtistTab.py  ConfigTab.py  PostTab.py  SortByTab.py  TagTab.py  ViewerTab.py
src/artrefsync/ui/widgets/: AdvancedScrolling.py  GifAdvancedScrolling.py  InputTreeView.py  LoadingBar.py  ModernTopBar.py  PhotoGallery.py  PhotoLabel.py  PostInfo.py  RoundedIcon.py
src/artrefsync/utils/: EventManager.py  PyInstallerUtils.py  TkThreadCaller.py  __init__.py  benchmark.py  image_utils.py  str_dict.py  utils.py
