[project]
name = "artrefsync"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "dacite>=1.9.2",
    "humanize>=4.14.0",
    "lxml>=6.0.2",
    "pillow>=12.0.0",
    "pydantic>=2.12.5",
    "pyinstaller>=6.18.0",
    "pympler>=1.1",
    "requests>=2.32.3",
    "setuptools>=80.9.0",
    "simple-toml-configurator>=1.3.0",
    "sortedcontainers>=2.4.0",
    "tkinterdnd2>=0.4.3",
    "ttkbootstrap>=1.19.2",
]

[dependency-groups]
dev = [
    "black>=26.3.0",
    "ruff>=0.14.7",
]
