[project]
name = "artrefsync"
version = "0.1.0"
description = "Tool to sync reference images from major image board sites given a list of artist names "
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "dacite>=1.9.2",
    "diskcache>=5.6.3",
    "lxml>=6.0.2",
    "opencv-python>=4.13.0.92",
    "pillow>=12.0.0",
    "requests>=2.32.3",
    "simple-toml-configurator>=1.3.0",
    "sortedcontainers>=2.4.0",
    "tenacity>=9.1.4",
    "tkinterdnd2>=0.4.3",
    "ttkbootstrap>=1.19.2",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.19.0",
    "ruff>=0.15.9",
]
